--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -411,6 +411,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <string name="preferences">Настройки</string>
     <string name="pref_cat_chans">Настройки имиджборд</string>
+    <string name="pref_chans_rearrange">Переставить</string>
     <string name="pref_cat_appearance">Внешний вид</string>
     <string name="pref_cat_advanced">Дополнительные</string>
     <string name="pref_cat_date_time">Дата и время</string>
