--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -404,6 +404,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <string name="preferences">Preferences</string>
     <string name="pref_cat_chans">Imageboards</string>
+    <string name="pref_chans_rearrange">Rearrange</string>
     <string name="pref_cat_appearance">Appearance</string>
     <string name="pref_cat_advanced">Advanced</string>
     <string name="pref_cat_date_time">Date and Time</string>
