--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -233,6 +233,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <string name="grid_gallery_select">Выбрать для загрузки</string>
     <string name="grid_gallery_download">Скачать</string>
+    <string name="grid_gallery_dlg_title">Загрузка</string>
+    <string name="grid_gallery_dlg_message">Подождите</string>
     
     <string name="postform_title_post">Новое сообщение</string>
     <string name="postform_title_thread">Новый тред</string>
