--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -187,6 +187,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="context_menu_quickaccess_add">Add to Quick Access</string>
     <string name="context_menu_quickaccess_remove">Remove from Quick Access</string>
     <string name="context_menu_quickaccess_custom_board">Add custom board</string>
+    <string name="context_menu_save_captcha">Save captcha</string>
     
     <string name="share_via">Share via</string>
     <string name="share_no_tabs">No open tabs</string>
@@ -452,6 +453,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_external_links_confirmation_summary">Ask before going external links</string>
     <string name="pref_do_not_close_tabs_title">Do not close tabs</string>
     <string name="pref_do_not_close_tabs_summary">Do not close tabs by pressing the Back button</string>
+    <string name="pref_pin_markup_title">Pin markup buttons</string>
+    <string name="pref_pin_markup_summary">Pin markup buttons in a posting form</string>
     <string name="pref_show_date_title">Display the time</string>
     <string name="pref_show_date_summary">Display the date and time of each post</string>
     <string name="pref_local_time_title">Show local time</string>
