reporting abuse on iichan

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -366,6 +366,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="crash_dialog_comment_prompt">Nachfolgend einen Kommentar zu dem Problem abgeben:</string>
     <string name="crash_dialog_ok_toast">Vielen Dank!</string>
     
+    <string name="iichan_prefs_report_thread">Thread für die Meldung</string>
+    <string name="iichan_prefs_report_thread_summary">Threadnummer in /d/ für die Meldung von Missbrauch</string>
+    
     <string name="kraut_prefs_kompturcode">Kompturcode</string>
     <string name="kraut_prefs_kompturcode_summary">Kompturcode cookie</string>
     
