--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -372,6 +372,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="crash_dialog_comment_prompt">Здесь можно добавить ваши замечания о проблеме:</string>
     <string name="crash_dialog_ok_toast">Спасибо!</string>
     
+    <string name="iichan_prefs_report_thread">Тред для жалоб</string>
+    <string name="iichan_prefs_report_thread_summary">Номер треда в /d/ для сообщений о нарушениях</string>
+    
     <string name="kraut_prefs_kompturcode">Kompturcode</string>
     <string name="kraut_prefs_kompturcode_summary">Kompturcode cookie</string>
     
