--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -375,6 +375,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="crash_dialog_comment_prompt">Коротко про ваші дії:</string>
     <string name="crash_dialog_ok_toast">Дякуємо!</string>
     
+    <string name="iichan_prefs_report_thread">Тред для скарг</string>
+    <string name="iichan_prefs_report_thread_summary">Номер треду в /d/ для повідомлень про порушення</string>
+    
     <string name="kraut_prefs_kompturcode">Kompturcode</string>
     <string name="kraut_prefs_kompturcode_summary">Kompturcode cookie</string>
     
