--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -365,6 +365,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
     <string name="crash_dialog_ok_toast">Thank you!</string>
     
+    <string name="iichan_prefs_report_thread">Thread for reporting</string>
+    <string name="iichan_prefs_report_thread_summary">Number of the thread in /d/ for reporting abuse</string>
+    
     <string name="kraut_prefs_kompturcode">Kompturcode</string>
     <string name="kraut_prefs_kompturcode_summary">Kompturcode cookie</string>
     
