--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -414,6 +414,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <string name="fourchan_prefs_new_recaptcha">Recaptcha 2.0</string>
     <string name="fourchan_prefs_new_recaptcha_summary">Использовать новую версию Recaptcha</string>
+    <string name="fourchan_prefs_new_recaptcha_fallback">Recaptcha 2.0 fallback</string>
+    <string name="fourchan_prefs_new_recaptcha_fallback_summary">Использовать Recaptcha 2.0 в режиме совместимости</string>
     
     <string name="preferences">Настройки</string>
     <string name="pref_cat_chans">Настройки имиджборд</string>
