mail.ru captcha on 2ch.hk

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -386,7 +386,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="makaba_prefs_mobile_api">Мобильный API</string>
     <string name="makaba_prefs_mobile_api_summary">Загружать только новые посты вместо обновления всего треда</string>
     <string name="makaba_prefs_force_google">Google Recaptcha</string>
-    <string name="makaba_prefs_force_google_summary">Использовать рекапчу вместо капчи от Яндекса</string>
+    <string name="makaba_prefs_force_google_summary">Использовать рекапчу вместо капчи от Mail.Ru</string>
     <string name="makaba_prefs_domain_category">Настройки домена</string>
     <string name="makaba_prefs_domain">Домен</string>
     <string name="makaba_prefs_domain_summary">Резервные адреса: 2ch.hk, 2ch.pm, 2ch.re, 2ch.tf, 2ch.wf, 2ch.yt, 2-ch.so</string>
