--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -380,7 +380,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="makaba_prefs_mobile_api">Mobile API</string>
     <string name="makaba_prefs_mobile_api_summary">Laden Sie nur neue Posts ohne Neuladen der ganzen Thread</string>
     <string name="makaba_prefs_force_google">Google Recaptcha</string>
-    <string name="makaba_prefs_force_google_summary">Verwenden Sie Recaptcha anstelle Captcha von Yandex</string>
+    <string name="makaba_prefs_force_google_summary">Verwenden Sie Recaptcha anstelle Captcha von Mail.Ru</string>
     <string name="makaba_prefs_domain_category">Domain</string>
     <string name="makaba_prefs_domain">Domain</string>
     <string name="makaba_prefs_domain_summary">Reserved domains: 2ch.hk, 2ch.pm, 2ch.re, 2ch.tf, 2ch.wf, 2ch.yt, 2-ch.so</string>
