--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -389,7 +389,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="makaba_prefs_mobile_api">Мобільний API</string>
     <string name="makaba_prefs_mobile_api_summary">Запитувати лише нові пости, а не цілий тред</string>
     <string name="makaba_prefs_force_google">Google Recaptcha</string>
-    <string name="makaba_prefs_force_google_summary">Recaptcha замість капчі Yandex</string>
+    <string name="makaba_prefs_force_google_summary">Recaptcha замість капчі Mail.Ru</string>
     <string name="makaba_prefs_domain_category">Домен</string>
     <string name="makaba_prefs_domain">Домен</string>
     <string name="makaba_prefs_domain_summary">Резервні адреси: 2ch.hk, 2ch.pm, 2ch.re, 2ch.tf, 2ch.wf, 2ch.yt, 2-ch.so</string>
