--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -379,8 +379,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="makaba_no_icon">Kein Symbol</string>
     <string name="makaba_prefs_mobile_api">Mobile API</string>
     <string name="makaba_prefs_mobile_api_summary">Laden Sie nur neue Posts ohne Neuladen der ganzen Thread</string>
-    <string name="makaba_prefs_force_google">Google Recaptcha</string>
-    <string name="makaba_prefs_force_google_summary">Verwenden Sie Recaptcha anstelle Captcha von Mail.Ru</string>
+    <string name="makaba_prefs_captcha_category">Captcha</string>
+    <string name="makaba_prefs_captcha_type">Captcha-Typ</string>
+    <string name="makaba_prefs_google_fallback">Recaptcha 2.0 Fallback</string>
+    <string name="makaba_prefs_google_fallback_summary">Den Kompatibilitätsmodus verwenden</string>
     <string name="makaba_prefs_domain_category">Domain</string>
     <string name="makaba_prefs_domain">Domain</string>
     <string name="makaba_prefs_domain_summary">Reserved domains: 2ch.hk, 2ch.pm, 2ch.re, 2ch.tf, 2ch.wf, 2ch.yt, 2-ch.so</string>
@@ -408,7 +410,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <string name="fourchan_prefs_new_recaptcha">Recaptcha 2.0</string>
     <string name="fourchan_prefs_new_recaptcha_summary">Die neue Version von Recaptcha verwenden</string>
-    <string name="fourchan_prefs_new_recaptcha_fallback">Recaptcha 2.0 fallback</string>
+    <string name="fourchan_prefs_new_recaptcha_fallback">Recaptcha 2.0 Fallback</string>
     <string name="fourchan_prefs_new_recaptcha_fallback_summary">Den Kompatibilitätsmodus verwenden</string>
     
     <string name="preferences">Einstellungen</string>
