--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -388,8 +388,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="makaba_no_icon">Іконки немає</string>
     <string name="makaba_prefs_mobile_api">Мобільний API</string>
     <string name="makaba_prefs_mobile_api_summary">Запитувати лише нові пости, а не цілий тред</string>
-    <string name="makaba_prefs_force_google">Google Recaptcha</string>
-    <string name="makaba_prefs_force_google_summary">Recaptcha замість капчі Mail.Ru</string>
+    <string name="makaba_prefs_captcha_category">Капча</string>
+    <string name="makaba_prefs_captcha_type">Тип капчі</string>
+    <string name="makaba_prefs_google_fallback">Recaptcha 2.0 fallback</string>
+    <string name="makaba_prefs_google_fallback_summary">Використовувати Google Recaptcha 2 в режимі сумісності</string>
     <string name="makaba_prefs_domain_category">Домен</string>
     <string name="makaba_prefs_domain">Домен</string>
     <string name="makaba_prefs_domain_summary">Резервні адреси: 2ch.hk, 2ch.pm, 2ch.re, 2ch.tf, 2ch.wf, 2ch.yt, 2-ch.so</string>
