--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -377,7 +377,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="makaba_catalog_image_size">Sort by Image size</string>
     <string name="makaba_no_icon">No Icon</string>
     <string name="makaba_prefs_mobile_api">Mobile API</string>
-    <string name="makaba_prefs_mobile_api_summary">Load only new posts without reloading the whole thread</string>
     <string name="makaba_prefs_captcha_category">Captcha</string>
     <string name="makaba_prefs_captcha_type">Captcha type</string>
     <string name="makaba_prefs_google_fallback">Recaptcha 2.0 fallback</string>
@@ -388,13 +387,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <string name="mikuba_password_ignored">(ignored)</string>
     
-    <string name="dobrochan_prefs_only_new_posts">Only new posts</string>
-    <string name="dobrochan_prefs_only_new_posts_summary">Load only new posts without reloading the whole thread</string>
     <string name="dobrochan_prefs_domain">Domain</string>
     <string name="dobrochan_prefs_domain_summary">Reserved domains: dobrochan.com, dobrochan.org, dobrochan.ru</string>
-    
-    <string name="nullchancc_prefs_only_new_posts">Only new posts</string>
-    <string name="nullchancc_prefs_only_new_posts_summary">Load only new posts without reloading the whole thread</string>
     
     <string name="dvach_prefs_domain">Domain</string>
     <string name="dvach_prefs_domain_summary">Reserved domains: 2-chru.net, mirror.2-chru.net, bypass.2-chru.net</string>
@@ -405,7 +399,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="infinity_tor_message">To post on 8chan over Tor, you must use the .onion domain.</string>
     
     <string name="inach_prefs_ajax_update">JSON Update</string>
-    <string name="inach_prefs_ajax_update_summary">Load only new posts without reloading the whole thread</string>
     
     <string name="fourchan_prefs_new_recaptcha">Recaptcha 2.0</string>
     <string name="fourchan_prefs_new_recaptcha_summary">Use the new version of Recaptcha</string>
@@ -436,6 +429,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_use_https_summary">Secure encrypted connection</string>
     <string name="pref_ignore_ssl_errors">Ignore SSL Errors</string>
     <string name="pref_ignore_ssl_errors_summary">Disable Hostname and Certificate Validation</string>
+    <string name="pref_only_new_posts">Only new posts</string>
+    <string name="pref_only_new_posts_summary">Load only new posts without reloading the whole thread</string>
     <string name="pref_cat_connection_extended">Advanced Settings</string>
     <string name="pref_okhttp">OkHttp</string>
     <string name="pref_okhttp_summary">Alternative HTTP-client with SPDY (may be unstable!)</string>
