--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -369,8 +369,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="iichan_prefs_report_thread">Thread für die Meldung</string>
     <string name="iichan_prefs_report_thread_summary">Threadnummer in /d/ für die Meldung von Missbrauch</string>
     
-    <string name="kraut_prefs_kompturcode">Kompturcode</string>
-    <string name="kraut_prefs_kompturcode_summary">Kompturcode cookie</string>
+    <string name="kraut_prefs_kompturcode">Komturcode</string>
+    <string name="kraut_prefs_kompturcode_summary">Komturcode cookie</string>
     
     <string name="makaba_catalog_standart">Nach Bump sortieren</string>
     <string name="makaba_catalog_last_reply">Nach Letzten Antworten sortieren</string>
