--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -375,8 +375,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="iichan_prefs_report_thread">Тред для жалоб</string>
     <string name="iichan_prefs_report_thread_summary">Номер треда в /d/ для сообщений о нарушениях</string>
     
-    <string name="kraut_prefs_kompturcode">Kompturcode</string>
-    <string name="kraut_prefs_kompturcode_summary">Kompturcode cookie</string>
+    <string name="kraut_prefs_kompturcode">Komturcode</string>
+    <string name="kraut_prefs_kompturcode_summary">Komturcode cookie</string>
     
     <string name="makaba_catalog_standart">Сортировка по бампам</string>
     <string name="makaba_catalog_last_reply">Сортировка по последнему ответу</string>
