--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -511,6 +511,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_cache_maxsize_hint">0 – без обмежень; типово 50 МБ</string>
     <string name="pref_clear_cache_title">Стерти кеш</string>
     <string name="pref_clear_cache_summary">%.1f МБ</string>
+    <string name="pref_clear_cache_confirmation">Ви дійсно хочете стерти кеш?</string>
     <string name="pref_about_version_title">Overchan Android</string>
     <string name="pref_about_license_title">Ліцензія</string>
     <string name="pref_about_license_summary">GPLv3</string>
