--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -501,6 +501,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_cache_maxsize_hint">0 - unlimited; 50 MB by default</string>
     <string name="pref_clear_cache_title">Clear cache</string>
     <string name="pref_clear_cache_summary">%.1f MB</string>
+    <string name="pref_clear_cache_confirmation">Are you sure you want to clear cache?</string>
     <string name="pref_about_version_title">Overchan Android</string>
     <string name="pref_about_license_title">License</string>
     <string name="pref_about_license_summary">GPLv3</string>
